# track2midi

./: .gitignore  README.md  analyze_examples.py  design.md  pyproject.toml  testament.md
results/: 20250519_170546_Contemporary10.mid  20250519_170903_Contemporary10.mid  20250519_171404_Contemporary10.mid  20250519_171518_Contemporary10.mid  20250519_171646_Contemporary10.mid  20250519_171658_12bar1.mid  20250519_172243_Contemporary10.mid  20250519_172339_Contemporary10.mid  20250519_172455_Contemporary10.mid  20250519_172646_Contemporary10.mid  20250519_173103_Contemporary10.mid  20250519_173321_Contemporary10.mid  20250519_173442_Contemporary10.mid  20250519_173603_Contemporary10.mid  20250519_173621_Contemporary10.mid  20250519_173811_Contemporary10.mid
src/models/: drum_classifier.pkl  drum_classifier_metrics.json
src/track2midi/: __main__.py  analysis_engine.py  audio_processor.py  config.py  data_collection.py  main_gui.py  midi_compare.py  midi_generator.py  ml_classifier.py  real_data_collector.py  train_model.py
