[tool.poetry]
name = "track2midi"
version = "0.1.0"
description = "A Python tool that converts audio songs into MIDI drum tracks"
authors = ["Wolfgang Bubberman <wolfbubberman@gmail.com>"]
readme = "README.md"
packages = [{ include = "track2midi", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.10.1"
numpy = "^1.24.0"
mido = "^1.3.0"
soundfile = "^0.12.1"
audioread = "^3.0.1"
ffmpeg-python = "^0.2.0"
resampy = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.0.284"

[tool.poetry.scripts]
track2midi = "track2midi.main_gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = ["py311"]
select = ["E", "F", "B", "I"]
ignore = []
